k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pi-ingress
  annotations:
    # nginx ingress controller
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: pi-client-service
                port:
                  number: 8080
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: pi-service-service
                port:
                  number: 31415
